# ctodo

./: .gitignore  CMakeLists.txt  README.md  install.sh
cmake/: CheckIWYU.cmake  ConfigSafeGuards.cmake  Configure.cmake  Findargs.cmake  Findcli.cmake  Findcxxopts.cmake  Finddimcli.cmake  Findeasyloggingpp.cmake  Findfmt.cmake  Findloguru.cmake  Misc.cmake
include/: common.h  config.h.in
src/: common.cc  main.cc
